--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,18 @@
 {
   "name": "Smart Weather App",
   "short_name": "Weather",
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "#020617",
   "theme_color": "#38bdf8",
-  "orientation": "portrait",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icon-512.png",
+      "src": "/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
